standage kenya UI completed

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="Standage.com.ng, Standage Kenya, 
-    Digitrad, International Trade, Jetro Kenya, Standage Japan, Partners with Marubeni Kenya,
-    Dave Gabriel, Omori Kenta, Akinori Adachi, Japan-Kenya, Used Cars from Japan,
-    Fintech, I.T, Laptops, Used PCs, Digital Marketplace, Online Marketplace, Edutech, 
-    Edutech in Kenya, Trading Company, Energy Companies, Yuasa Batteries in Kenya, GS Yuasa, Agro allied Japan,
-    Import and Export, Payment Solutions, Yen to Naira, Transfer to Japan, Medage"/>
+    <meta name="keywords" content="Standage.com.ng, Standage Kenya, Stand Enzi, Digitrad, International Trade, Jetro Kenya, Standage Japan, Kevin Kibe, Omori Kenta, Akinori Adachi, Japan-Kenya, Used Cars from Japan, Fintech, I.T, Trading Company, Import and Export, Payment Solutions, Yen to Naira, Transfer to Japan, Medage"/>
     <meta
       name="description"
-      content="STANDAGE Kenya is an IT Solutions & Trading company established in 2017. We develop digital platforms for international trading"
+      content="Stand Enzi takes pride in offering a wide selection of used cars from some of the most trusted brands in the industry."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
@@ -29,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Standage Kenya</title>
+    <title>Stand Enzi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
